# tgbot

./: CMakeLists.txt  README.md  bot.py  main.c
src/: CMakeCache.txt  CMakeLists.txt  a.out  bot.py  dnqr.h  libdnqr.c  main.c  main.cpp
