cmake_minimum_required(VERSION 3.10)
	project(dnar)
	add_executable(dnar main.c)
	add_executable(test main.c)
	include (CheckCSourceCompiles)
	include (CheckFunctionExists)
	if (UNIX)
		#check_include_files (libavformat/avformat.h HAVE_AVFORMAT)
		check_function_exits (puts HAVE_PUTS)
	endif()
	target_link_libraries(dnar PUBLIC "-larchive -lqrencode -lgd -Wall")
	target_link_libraries(test PUBLIC "-larchive -lqrencode -lgd -Wall")
